# Retrieval-based-Voice-Conversion-WebUI

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checksum.yml  genlocale.yml  pull_format.yml  push_format.yml  unitest.yml  unittest.yml
docs/cn/: README.cn.md  faq.md
docs/en/: faq_en.md  training_tips_en.md
docs/fr/: README.fr.md  faq_fr.md
docs/jp/: README.ja.md
docs/kr/: README.ko.han.md  README.ko.md  faiss_tips_ko.md
docs/pt/: README.pt.md  faiss_tips_pt.md  faq_pt.md  training_tips_pt.md
docs/tr/: README.tr.md  faq_tr.md  training_tips_tr.md
i18n/: i18n.py
infer/lib/: audio.py
src/rvc_webui/: config.py  main_gui.py  main_web.py
src/rvc_webui/cli/: infer_batch_rvc.py  infer_cli.py
src/rvc_webui/i18n/: i18n.py  locale_diff.py  scan_i18n.py
src/rvc_webui/infer/lib/: audio.py  rtrvc.py  rvcmd.py  slicer2.py
src/rvc_webui/infer/lib/train/: data_utils.py  mel_processing.py  process_ckpt.py  utils.py
src/rvc_webui/infer/lib/uvr5_pack/lib_v5/: layers.py  layers_123821KB.py  layers_33966KB.py  model_param_init.py  nets.py  spec_utils.py
src/rvc_webui/infer/modules/gui/: torchgate.py
src/rvc_webui/infer/modules/uvr5/: mdxnet.py  modules.py  vr.py
src/rvc_webui/infer/modules/vc/: __init__.py  hash.py  info.py  modules.py  pipeline.py  utils.py
src/rvc_webui/rvc/: __init__.py  hubert.py  synthesizer.py
src/rvc_webui/rvc/f0/: crepe.py  deepunet.py  dio.py  e2e.py  f0.py  fcpe.py  harvest.py  mel.py  models.py  pm.py  rmvpe.py  stft.py
src/rvc_webui/rvc/ipex/: attention.py  hijacks.py
src/rvc_webui/rvc/jit/: jit.py
src/rvc_webui/rvc/layers/: attentions.py  discriminators.py  encoders.py  generators.py  norms.py  nsf.py  residuals.py  synthesizers.py  transforms.py  utils.py
src/rvc_webui/rvc/onnx/: exporter.py  infer.py  synthesizer.py
src/rvc_webui/train/: extract_f0_print.py  extract_feature_print.py  preprocess.py  train.py
tools/cmd/: infer-pm-index256.py  train-index-v2.py  train-index.py
tools/cmd/onnx/: export.py  infer.py
tools/web/: infer-only.py
