[project]
name = "rvc-webui"
version = "0.1.0"
description = "An easy-to-use voice conversion framework based on VITS."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

urls = { Repository = "https://github.com/fumiama/Retrieval-based-Voice-Conversion-WebUI" }

dependencies = [
    "absl-py>=1.2.0",
    "audioread",
    "av",
    "colorama>=0.4.5",
    "cython",
    "faiss-cpu",
    "fairseq @ git+https://github.com/fumiama/fairseq.git@ffd2933ffccb088f61eeae951fbaa664b45c584f",
    "fastapi",
    "fsspec>=2022.11.0",
    "gradio",
    "httpx",
    "jinja2>=3.1.2",
    "joblib>=1.1.0",
    "json5",
    "librosa>=0.10.2",
    "llvmlite",
    "markdown",
    "matplotlib>=3.7.0",
    "matplotlib-inline>=0.1.3",
    "numba",
    "numpy",
    "pillow>=9.1.1",
    "praat-parselmouth>=0.4.2",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "pybase16384",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "pyworld==0.3.2",
    "pyyaml>=6.0",
    "resampy>=0.4.2",
    "scikit-learn",
    "scipy",
    "sympy>=1.11.1",
    "tabulate>=0.8.10",
    "tensorboard",
    "tensorboardx",
    "torchcrepe>=0.0.23",
    "torchfcpe",
    "tornado>=6.1",
    "tqdm>=4.63.1",
    "uc-micro-py>=1.0.1",
    "uvicorn>=0.21.1",
    "werkzeug>=2.2.3",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime",
    "torch>=2.6",
    "torchaudio>=2.6",
    "torchvision>=0.21",
]

cuda = [
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "torch>=2.6; sys_platform != 'darwin'",
    "torchaudio>=2.6; sys_platform != 'darwin'",
    "torchvision>=0.21; sys_platform != 'darwin'",
]

rocm = [
    "onnxruntime; sys_platform == 'linux'",
    "torch>=2.6; sys_platform == 'linux'",
    "torchaudio>=2.6; sys_platform == 'linux'",
    "torchvision>=0.21; sys_platform == 'linux'",
]

dml = [
    "onnxruntime-directml; sys_platform == 'win32'",
    "torch-directml; sys_platform == 'win32'",
    "torchvision; sys_platform == 'win32'",
    "torchaudio; sys_platform == 'win32'",
]

gui = [
    "einops",
    "freesimplegui",
    "local-attention",
    "noisereduce",
    "sounddevice",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
        { extra = "dml" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm62"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pypi-directml"
url = "https://pypi.org/simple"
explicit = true

# NOTE: `uv` validates `[tool.uv.sources]` markers independently and
# does not use `[tool.uv].conflicts` to prove exclusivity, so the
# verbose `extra == 'cuda' and extra != 'rocm' ...` form is intentional.
[tool.uv.sources]
torch = [
    { index = "pypi-directml", marker = "extra == 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-cu128", marker = "extra == 'cuda' and extra != 'dml' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-rocm62", marker = "extra == 'rocm' and extra != 'dml' and extra != 'cuda' and extra != 'cpu'" },
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'dml' and extra != 'cuda' and extra != 'rocm'" },
]

torchvision = [
    { index = "pypi-directml", marker = "extra == 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-cu128", marker = "extra == 'cuda' and extra != 'dml' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-rocm62", marker = "extra == 'rocm' and extra != 'dml' and extra != 'cuda' and extra != 'cpu'" },
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'dml' and extra != 'cuda' and extra != 'rocm'" },
]

torchaudio = [
    { index = "pypi-directml", marker = "extra == 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-cu128", marker = "extra == 'cuda' and extra != 'dml' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-rocm62", marker = "extra == 'rocm' and extra != 'dml' and extra != 'cuda' and extra != 'cpu'" },
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'dml' and extra != 'cuda' and extra != 'rocm'" },
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rvc*", "infer*", "configs*", "i18n*"]
exclude = ["assets*", "logs*", "TEMP*", "weights*"]

[tool.setuptools.package-data]
i18n = ["locale/*.json"]
