[project]
name = "rvc-webui"
version = "0.1.0"
description = "An easy-to-use voice conversion framework based on VITS."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

urls = { Repository = "https://github.com/fumiama/Retrieval-based-Voice-Conversion-WebUI" }

dependencies = [
    "absl-py>=1.2.0",
    "audioread",
    "av",
    "colorama>=0.4.5",
    "cython",
    "fastapi",
    "fsspec>=2022.11.0",
    "gradio",
    "httpx",
    "jinja2>=3.1.2",
    "joblib>=1.1.0",
    "json5",
    "librosa>=0.10.2",
    "llvmlite",
    "markdown",
    "matplotlib>=3.7.0",
    "matplotlib-inline>=0.1.3",
    "numba",
    "numpy",
    "pillow>=9.1.1",
    "praat-parselmouth>=0.4.2",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "pybase16384",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "pyworld>=0.3.2",
    "pyyaml>=6.0",
    "resampy>=0.4.2",
    "scikit-learn",
    "scipy",
    "sympy>=1.11.1",
    "tabulate>=0.8.10",
    "tensorboard",
    "tensorboardx",
    "tornado>=6.1",
    "tqdm>=4.63.1",
    "uc-micro-py>=1.0.1",
    "uvicorn>=0.21.1",
    "werkzeug>=2.2.3",
]

[project.scripts]
rvc-web = "rvc_webui.main_web:main"
rvc-gui = "rvc_webui.main_gui:main"
rvc-infer = "rvc_webui.cli.infer_cli:main"
rvc-infer-batch = "rvc_webui.cli.infer_batch_rvc:main"

# FIXME: Import torchcrepe and torchfcpe properly
[project.optional-dependencies]
cpu = [
    "faiss-cpu",
    "onnxruntime",
    "torch>=2.6",
    "torchaudio>=2.6",
    "torchvision>=0.21",
    "fairseq @ git+https://github.com/perennialtech/fairseq.git@ae692e1ab6dc70a5266f542bc25dd847abb5172f",
    # "torchcrepe>=0.0.23",
    # "torchfcpe",
]

cuda = [
    "faiss-gpu-cu12; sys_platform != 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "torch>=2.6; sys_platform != 'darwin'",
    "torchaudio>=2.6; sys_platform != 'darwin'",
    "torchvision>=0.21; sys_platform != 'darwin'",
    "fairseq @ git+https://github.com/perennialtech/fairseq.git@ae692e1ab6dc70a5266f542bc25dd847abb5172f ; sys_platform != 'darwin'",
    # "torchcrepe>=0.0.23; sys_platform != 'darwin'",
    # "torchfcpe; sys_platform != 'darwin'",
]

rocm = [
    "faiss-cpu; sys_platform == 'linux'",
    "onnxruntime; sys_platform == 'linux'",
    "torch>=2.6; sys_platform == 'linux'",
    "torchaudio>=2.6; sys_platform == 'linux'",
    "torchvision>=0.21; sys_platform == 'linux'",
    "pytorch-triton-rocm; sys_platform == 'linux'",
    "triton-rocm; sys_platform == 'linux'",
    "fairseq @ git+https://github.com/perennialtech/fairseq.git@ae692e1ab6dc70a5266f542bc25dd847abb5172f ; sys_platform == 'linux'",
    # "torchcrepe>=0.0.23; sys_platform == 'linux'",
    # "torchfcpe; sys_platform == 'linux'",
]

xpu = [
    "faiss-cpu; sys_platform == 'linux'",
    "onnxruntime; sys_platform == 'linux'",
    "torch>=2.6; sys_platform == 'linux'",
    "torchaudio>=2.6; sys_platform == 'linux'",
    "torchvision>=0.21; sys_platform == 'linux'",
    "triton-xpu; sys_platform == 'linux'",
    "fairseq @ git+https://github.com/perennialtech/fairseq.git@ae692e1ab6dc70a5266f542bc25dd847abb5172f ; sys_platform == 'linux'",
    # "torchcrepe>=0.0.23; sys_platform == 'linux'",
    # "torchfcpe; sys_platform == 'linux'",
]

dml = [
    "faiss-cpu; sys_platform == 'win32'",
    "onnxruntime-directml; sys_platform == 'win32'",
    "torch-directml; sys_platform == 'win32'",
    "torchvision; sys_platform == 'win32'",
    "torchaudio; sys_platform == 'win32'",
    "fairseq @ git+https://github.com/perennialtech/fairseq.git@ae692e1ab6dc70a5266f542bc25dd847abb5172f ; sys_platform == 'win32'",
    # "torchcrepe>=0.0.23; sys_platform == 'win32'",
    # "torchfcpe; sys_platform == 'win32'",
]

gui = [
    "einops",
    "freesimplegui",
    "local-attention",
    "noisereduce",
    "sounddevice",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "mypy>=2.1.0",
    "build>=1.2.2",
    "pytest-cov>=5.0",
    "pytest>=8.3",
    "ruff>=0.8",
    "twine>=6.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
        { extra = "dml" },
        { extra = "xpu" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm62"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# NOTE: `uv` validates `[tool.uv.sources]` markers independently and
# does not use `[tool.uv].conflicts` to prove exclusivity, so the
# verbose `extra == 'cuda' and extra != 'rocm' ...` form is intentional.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin' and extra != 'dml' and extra != 'rocm' and extra != 'xpu' and extra != 'cpu'" },
    { index = "pytorch-rocm62", extra = "rocm", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'xpu' and extra != 'cpu'" },
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'xpu'" },
]

torchvision = [
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin' and extra != 'dml' and extra != 'rocm' and extra != 'xpu' and extra != 'cpu'" },
    { index = "pytorch-rocm62", extra = "rocm", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'xpu' and extra != 'cpu'" },
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'xpu'" },
]

torchaudio = [
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform != 'darwin' and extra != 'dml' and extra != 'rocm' and extra != 'xpu' and extra != 'cpu'" },
    { index = "pytorch-rocm62", extra = "rocm", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'xpu' and extra != 'cpu'" },
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'xpu'" },
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm62", extra = "rocm", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'xpu' and extra != 'cpu'" },
]

triton-rocm = [
    { index = "pytorch-rocm62", extra = "rocm", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'xpu' and extra != 'cpu'" },
]

triton-xpu = [
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' and extra != 'dml' and extra != 'cuda' and extra != 'rocm' and extra != 'cpu'" },
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rvc_webui*"]
exclude = ["assets*", "logs*", "TEMP*", "weights*"]

[tool.setuptools.package-data]
"rvc_webui.i18n" = ["locale/*.json"]
"rvc_webui.infer.modules.vc" = ["*.npz"]
"rvc_webui.infer.lib.uvr5_pack" = ["**/*.json"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "B",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["rvc_webui"]

[tool.coverage.report]
show_missing = true
skip_covered = true
